<resources>
    <string name="app_name">TicketingTA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tiketdewasa">Tiket ini berlaku untuk semua umur, anda dapat menikmati semua guest star yang ada.</string>
    <string name="hargaTiketDewasa">Rp 200.000/tiket</string>

    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="telp">Telepon</string>
    <string name="password">Password</string>

    <string name="btn_sign_up">Sign Up</string>
    <string name="btnSignIn">LOGIN</string>

</resources>